--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,15 @@
+.copyrighted.name {
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #fafafa; 
+}
 
-/* Basic Navbar styling */
 nav {
-  background-color: #000000;
+  background-color: #0849ab;
   color: white;
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav div {
@@ -15,22 +20,21 @@ nav div {
   margin: 0 auto;
 }
 
-/* Logo */
 nav div div:first-child a {
   font-size: 1.5rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
-/* Navigation links container */
+
 nav div div:last-child {
   display: flex;
   gap: 1rem;
 }
 
-/* nav links */
+
 nav a {
   color: white;
   text-decoration: none;
@@ -40,15 +44,14 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #008480;
+  background-color: #0037fc;
 }
 
  /* / color of current link /  */
 nav a.active {
-  background-color: #008480;
+  background-color: #4b50e6;
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
   nav div {
     flex-direction: column;
@@ -59,5 +62,9 @@ nav a.active {
     width: 100%;
     justify-content: space-between;
   }
+}
+
+reach-out-text {
+  color: #000000;
 }
 
